--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=sbb
+
+#DATABASE
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.database.url=jdbc:h2:~/local
+spring.database.driverClassName=org.h2.Driver
+spring.database.username=sa
+spring.database.password=
+
+#JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
